<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/metronomeFragmentContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.ui.fragment.MetronomeFragment">

    <ImageView
        android:layout_width="0dp"
...
